# salt

./: .clang-format  .codecov.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
playground-win32/: .clang-format  CMakeLists.txt  main.cpp
salt-core/: CMakeLists.txt
salt-core/salt/: core.hpp
salt-core/salt/core/: application.cpp  application.hpp  config.hpp  engine.cpp  engine.hpp  entry-point.hpp  entry_point.cpp  entry_point.hpp  layer.hpp  layer_stack.hpp  logger.hpp  meta.hpp  overlay.hpp  window.hpp
salt-core/salt/core/detail/: source_location.hpp
salt-core/salt/core/platform/: glfw_window_v2.cpp  glfw_window_v2.hpp  metal_window_v2.cpp  metal_window_v2.hpp  win64_window.cpp  win64_window.hpp
salt-foundation/: CMakeLists.txt
salt-foundation/salt/: algorithm.hpp  foundation.hpp  memory.hpp  utility.hpp
salt-foundation/salt/algorithm/: equal-test.cpp  equal.hpp  lexicographical_compare-test.cpp  lexicographical_compare.hpp  minmax-test.cpp
salt-foundation/salt/algorithm/detail/: lexicographical_compare_three_way.hpp
salt-foundation/salt/containers/: array-test.cpp  array.hpp  static_vector-test.cpp  static_vector.hpp
salt-foundation/salt/foundation/: abort.hpp  addressof.hpp  algorithm-test.cpp  algorithm.hpp  align-test.cpp  align.hpp  aligned_cast.hpp  allocator_storage-test.cpp  allocator_storage.hpp  allocator_traits.hpp  array-test.cpp  array.hpp  config.hpp  construct_at.hpp  debugging.cpp  debugging.hpp  default_allocator.hpp  deleter.hpp  fast_terminate.hpp  heap_allocator-test.cpp  heap_allocator.hpp  io.hpp  iterator_adapter-test.cpp  iterator_adapter.hpp  launder.hpp  logger.hpp  logging.hpp  memory.hpp  memory_arena-test.cpp  memory_arena.hpp  memory_block-test.cpp  memory_block.hpp  memory_pool-test.cpp  memory_pool.hpp  memory_pool_list-test.cpp  memory_pool_list.hpp  memory_pool_type.hpp  memory_stack-test.cpp  memory_stack.hpp  pair.hpp  (+28 more)
salt-foundation/salt/foundation/algorithm/: equal-test.cpp  equal.hpp  lexicographical_compare-test.cpp  lexicographical_compare.hpp  minmax-test.cpp  minmax.hpp
salt-foundation/salt/foundation/algorithm/detail/: lexicographical_compare_three_way.hpp  synth_three_way.hpp
salt-foundation/salt/foundation/containers/: array-test.cpp  array.hpp  static_vector-test.cpp  static_vector.hpp
salt-foundation/salt/foundation/detail/: aligned_cast.hpp  as_local-test.cpp  as_local.hpp  constexpr_construct.hpp  constexpr_memcmp-test.cpp  constexpr_memcmp.hpp  constexpr_memcpy-test.cpp  constexpr_memcpy.hpp  constexpr_uninitialized-test.cpp  constexpr_uninitialized.hpp  debug_helpers-test.cpp  debug_helpers.cpp  debug_helpers.hpp  distance.hpp  fixed_stack-test.cpp  fixed_stack.hpp  free_list-test.cpp  free_list.hpp  free_list_array-test.cpp  free_list_array.hpp  free_list_helpers.hpp  iterator_adapter-test.cpp  iterator_adapter.hpp  logger_impl.hpp  low_level_allocator_adapter.hpp  malloc_allocator.hpp  source_location-test.cpp  source_location.hpp  strip_path-test.cpp  strip_path.hpp  synth_three_way.hpp  test_allocator.hpp  to_string-test.cpp  to_string.hpp  win32_heap_allocator.hpp
salt-foundation/salt/foundation/io/: device.hpp  manipulators-test.cpp  manipulators.hpp  print-test.cpp  print.hpp
salt-foundation/salt/foundation/logging/: logger.hpp
salt-foundation/salt/foundation/memory/: align-test.cpp  align.hpp  allocator_storage-test.cpp  allocator_storage.hpp  allocator_traits.hpp  construct_at.hpp  debugging.cpp  default_allocator.hpp  deleter.hpp  heap_allocator-test.cpp  heap_allocator.hpp  memory_arena-test.cpp  memory_arena.hpp  memory_block.hpp  memory_pool-test.cpp  memory_pool.hpp  memory_pool_list-test.cpp  memory_pool_list.hpp  memory_pool_type.hpp  memory_stack-test.cpp  memory_stack.hpp  static_allocator-test.cpp  static_allocator.hpp  std_allocator_adapter-test.cpp  std_allocator_adapter.hpp  temporary_allocator-test.cpp  temporary_allocator.cpp  temporary_allocator.hpp  threading.hpp  uninitialized_construct-test.cpp  uninitialized_construct.hpp  uninitialized_storage-test.cpp  uninitialized_storage.hpp
salt-foundation/salt/foundation/utility/: distance.hpp  exchange.hpp  iterator_adapter-test.cpp  iterator_adapter.hpp  terminate.hpp  types.hpp  unreachable.hpp
salt-foundation/salt/logging/: logger.hpp
salt-foundation/salt/logging/detail/: logger_impl.hpp
salt-foundation/salt/memory/: align-test.cpp  allocator_traits.hpp  default_allocator.hpp  heap_allocator-test.cpp  heap_allocator.hpp  memory_arena-test.cpp  memory_block.hpp  static_allocator-test.cpp  uninitialized_construct-test.cpp  uninitialized_construct.hpp  uninitialized_storage-test.cpp  uninitialized_storage.hpp
salt-foundation/salt/memory/detail/: constexpr_memcpy.hpp  debug_helpers.cpp  fixed_stack-test.cpp  fixed_stack.hpp  free_list-test.cpp  free_list.hpp  free_list_array-test.cpp  free_list_array.hpp  low_level_allocator_adapter.hpp  utility.hpp
salt-foundation/salt/utility/: abort.hpp  iterator_adapter-test.cpp  iterator_adapter.hpp
salt-math/: CMakeLists.txt
salt-math/salt/: math.hpp
salt-math/salt/math/: compare-test.cpp  compare.hpp  primitives-test.cpp  primitives.hpp
salt-math/salt/math/detail/: pointable.hpp  sizeable.hpp
salt-platform/: CMakeLists.txt
salt-platform/salt/: platform.hpp
salt-platform/salt/platform/: glfw_opengl_imgui_overlay.cpp  glfw_opengl_imgui_overlay.hpp  glfw_window.cpp  glfw_window.hpp  macos_window.cpp  macos_window.hpp  metal_window.cpp  metal_window.hpp  opengl_imgui_overlay.cpp  opengl_imgui_overlay.hpp  opengl_window.cpp  opengl_window.hpp
salt-platform/salt/platform/win32/: api.hpp
salt-playground/: CMakeLists.txt  playground.cpp  playground.mm
salt-playground-windows/: CMakeLists.txt  imgui-demo.inl  main.cpp  playground.cpp
salt-utils/: CMakeLists.txt
salt-utils/salt/: utils.hpp
salt-utils/salt/utils/: as_local-test.cpp  as_local.hpp  static_storage-test.cpp  static_storage.hpp  to_string-test.cpp  to_string.hpp  uninitialized_storage-test.cpp  uninitialized_storage.hpp
salt-utils/salt/utils/detail/: source_location-test.cpp
(+172 files in other folders)
